--- a/EP01/ep01.ipynb
+++ b/EP01/ep01.ipynb
@@ -13,10 +13,9 @@
    "source": [
     "## Introducao\n",
     "\n",
-    "    Nesse relatorio examinamos duas formas de movimento, o Movimento Retilineo Uniforme (MRU) e o Movimento Retilineo Uniformemente Variado (MRUV). Tentaremos estimar, a partir do nosso conhecimento previo sobre as caracteristicas desses dois movimentos, equaçoes que modelem os dados experimentais adequadamente.\n",
-    "    \n",
-    "    \n",
-    "    Os experimentos realizados foram os seguintes: Para o MRU, uma pessoa andava em velocidade constante em um terreno plano, e foi medido o tempo de deslocamento dessa pessoa ao atingir as distancias de 10,20 e 30 metros. Para o MRUV, uma pessoa utilizava um skate e eram medidos os tempos nas mesmas distancias."
+    "Nesse relatorio examinamos duas formas de movimento, o Movimento Retilineo Uniforme (MRU) e o Movimento Retilineo Uniformemente Variado (MRUV). Tentaremos estimar, a partir do nosso conhecimento previo sobre as caracteristicas desses dois movimentos, equaçoes que modelem os dados experimentais adequadamente.\n",
+    "\n",
+    "Os experimentos realizados foram os seguintes: Para o MRU, uma pessoa andava em velocidade constante em um terreno plano, e foi medido o tempo de deslocamento dessa pessoa ao atingir as distancias de 10,20 e 30 metros. Para o MRUV, uma pessoa utilizava um skate e eram medidos os tempos nas mesmas distancias."
    ]
   },
   {
@@ -25,11 +24,11 @@
    "source": [
     "## Metodo\n",
     "\n",
-    "    Para os dois experimentos medimos com uma regua as distancias de 10, 20 e 30 metros de um ponto inicial, e posicionamos pessoas ao longo desses pontos. Cada pessoa tinha um cronometro e registrava quando a pessoa carregando o acelerometro passava pela sua marca. Em algumas ocasioes a pessoa na marca dos 30 metros tambem gravou o experimento. \n",
-    "    Antes de cada medicao as pessoas se posicionavam, a pessoa com o acelerometro começava a medicao dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
-    "    No MRU, o deslocamento era feito por uma pessoa andando a velocidade constante segurando o celular.\n",
-    "    No MRUV, o deslocamento era feito por uma pessoa em cima de um skate ao longo de uma decida, segurando o celular.\n",
-    "    Nos dois tipos de movimento fizemos mediçoes com 3 pessoas diferentes, cada pessoa realizando 3 mediçoes.\n",
+    "Para os dois experimentos medimos com uma regua as distancias de 10, 20 e 30 metros de um ponto inicial, e posicionamos pessoas ao longo desses pontos. Cada pessoa tinha um cronometro e registrava quando a pessoa carregando o acelerometro passava pela sua marca. Em algumas ocasioes a pessoa na marca dos 30 metros tambem gravou o experimento. \n "
+    "Antes de cada medicao as pessoas se posicionavam, a pessoa com o acelerometro começava a medicao dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
+    "No MRU, o deslocamento era feito por uma pessoa andando a velocidade constante segurando o celular.\n",
+    "No MRUV, o deslocamento era feito por uma pessoa em cima de um skate ao longo de uma decida, segurando o celular.\n",
+    "Nos dois tipos de movimento fizemos mediçoes com 3 pessoas diferentes, cada pessoa realizando 3 mediçoes.\n",
     "\n",
     "   COLOCAR EXPLICACAO DO PROGRAMA AQUI"
    ]
