Adiciona planilhas e escreve comentarios sobre os dados do acelerometro
- Unzipa arquivos contidos em "ArquivosArrumados.zip"
- Adiciona comentarios sobre os dados do acelerometro (precisa de revi
são)
- Adiciona o codigo de "GraficosFinal.ipynb" no "ep01.ipynb"

Signed-off-by: Caio Andrade <caiotdandrade@gmail.com>

--- a/EP01/ep01.ipynb
+++ b/EP01/ep01.ipynb
@@ -1,6 +1,6 @@
 {
  "cells": [
-   {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +13,8 @@
    "source": [
     "## Introducao\n",
     "\n",
-    "Nesse relatorio examinamos duas formas de movimento, o Movimento Retilineo Uniforme (MRU) e o Movimento Retilineo Uniformemente Variado (MRUV). Tentaremos estimar, a partir do nosso conhecimento previo sobre as caracteristicas desses dois movimentos, equaçoes que modelem os dados experimentais adequadamente.\n Os experimentos realizados foram os seguintes: Para o MRU, uma pessoa andava em velocidade constante em um terreno plano, e foi medido o tempo de deslocamento dessa pessoa ao atingir as distancias de 10,20 e 30 metros. Para o MRUV, uma pessoa utilizava um skate e eram medidos os tempos nas mesmas distancias."
+    "Nesse relatorio examinamos duas formas de movimento, o Movimento Retilineo Uniforme (MRU) e o Movimento Retilineo Uniformemente Variado (MRUV). Tentaremos estimar, a partir do nosso conhecimento previo sobre as caracteristicas desses dois movimentos, equaçoes que modelem os dados experimentais adequadamente.\n",
+    " Os experimentos realizados foram os seguintes: Para o MRU, uma pessoa andava em velocidade constante em um terreno plano, e foi medido o tempo de deslocamento dessa pessoa ao atingir as distancias de 10,20 e 30 metros. Para o MRUV, uma pessoa utilizava um skate e eram medidos os tempos nas mesmas distancias."
    ]
   },
   {
@@ -22,7 +23,8 @@
    "source": [
     "## Metodo\n",
     "\n",
-    "Para os dois experimentos medimos com uma regua as distancias de 10, 20 e 30 metros de um ponto inicial, e posicionamos pessoas ao longo desses pontos. Cada pessoa tinha um cronometro e registrava quando a pessoa carregando o acelerometro passava pela sua marca. Em algumas ocasioes a pessoa na marca dos 30 metros tambem gravou o experimento. \n Antes de cada medicao as pessoas se posicionavam, a pessoa com o acelerometro começava a medicao dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
+    "Para os dois experimentos medimos com uma regua as distancias de 10, 20 e 30 metros de um ponto inicial, e posicionamos pessoas ao longo desses pontos. Cada pessoa tinha um cronometro e registrava quando a pessoa carregando o acelerometro passava pela sua marca. Em algumas ocasioes a pessoa na marca dos 30 metros tambem gravou o experimento. \n",
+    " Antes de cada medicao as pessoas se posicionavam, a pessoa com o acelerometro começava a medicao dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
     "No MRU, o deslocamento era feito por uma pessoa andando a velocidade constante segurando o celular.\n",
     "No MRUV, o deslocamento era feito por uma pessoa em cima de um skate ao longo de uma decida, segurando o celular.\n",
     "Nos dois tipos de movimento fizemos mediçoes com 3 pessoas diferentes, cada pessoa realizando 3 mediçoes.\n",
@@ -62,24 +64,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Medições do acelerômetro\n",
+    "\n",
+    "Os gráficos relativos às medições feitas pelo acelerômetro se referem à força g (resultante entre a força normal e a força peso) dividida em tres componentes : x, y e z; O celular foi segurado com a tela virada para cima, de forma que a componente Gz é perpendicular ao solo, e positiva na direção \"do céu\", a componente y tem a direção do movimento, e o sentido da velocidade executada pelo corpo, e a componente x está contida no mesmo plano que a componente y, mas é perpendicular a y, de forma que Gy mede as perturbações \"laterais\" do movimento.\n",
+    "\n",
+    "Pelos gráficos, podemos notar consistentemente que os movimentos no skate foram mais estaveis, ja que o movimento se baseia no rolamento das rodas em detrimento de dar passos no chão (o que causa mais perturbações no movimento). Com os dados do acelerômetro, plotamos - utilizando o algoritmo de euler avançado - Gráficos de VElocidade x TEmpo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aqui entra o grafico. As sessões 'Interpretação' e 'Análise' só poderao ser escritas depois de ter os graficos.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Aqui entra o grafico. As sessões 'Interpretação' e 'Análise' só poderao ser escritas depois de ter os graficos.\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
