corrige erros gramaticais e adiciona mais detalhes às sessões iniciais

--- a/EP01/ep01.ipynb
+++ b/EP01/ep01.ipynb
@@ -27,10 +27,10 @@
     "## Método\n",
     "\n",
     "Para os dois experimentos medimos com uma trena as distâncias de 10, 20 e 30 metros de um ponto inicial, e posicionamos pessoas ao longo desses pontos. Cada pessoa tinha um cronometro e registrava quando a pessoa carregando o acelerometro passava pela sua marca. Em algumas ocasiões a pessoa na marca dos 30 metros também gravou o experimento. \n",
-    " Antes de cada medição, as pessoas se posicionavam em suas marcas e a pessoa na marca de 10m sinalizava a todos os membros que o experimento estaria prestes a começar (fazendo uma contagem regressiva e, ao fim da contagem, dizendo \"Começou\"). Depois disso, a pessoa com o acelerometro começava a medição dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
+    " Antes de cada medição, as pessoas se posicionavam em suas marcas e a pessoa na marca de 10m sinalizava a todos os membros que o experimento estaria prestes a começar (fazendo uma contagem regressiva e, ao fim da contagem, dizendo \"Começou\"). Depois disso, a pessoa com o acelerometro começava a medição dos dados sem iniciar o movimento e esperava 3 segundos, apos isso ela indicava o inicio do experimento (gritando \"Já\") e os outros membros iniciavam os cronometros, medindo o tempo que a pessoa demorava para atingir suas marcas.\n",
     "No MRU, o deslocamento era feito por uma pessoa andando a velocidade constante segurando o celular.\n",
     "No MRUV, o deslocamento era feito por uma pessoa em cima de um skate ao longo de uma decida, segurando o celular.\n",
-    "Nos dois tipos de movimento fizemos mediçoes com 3 pessoas diferentes, cada pessoa realizando 3 mediçoes.\n",
+    "Nos dois tipos de movimento fizemos mediçoes com 3 pessoas diferentes, cada pessoa realizando 3 mediçoes. Tentamos padronizar ao máximo os movimentos pedindo para que todos os integrantes segurassem o celular de forma paralela ao chão.\n",
     "\n"
    ]
   },
