--- a/EP01/GraficosFinal.ipynb
+++ b/EP01/GraficosFinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "import glob\n",
     "names = []\n",
     "for file in glob.glob(\"*.csv\"):\n",
-    "    names.append(file)\n",
+    "    if file != \"dadosMU.csv\" and file != \"dadosMUV.csv\":\n",
+    "        names.append(file)\n",
     "#print(names)\n",
     "names.sort()\n",
     "def calcula(i):\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
