Adds euler method functions

--- a/EP2/ep02.ipynb
+++ b/EP2/ep02.ipynb
@@ -53,6 +53,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funções utilizadas para Euler\n",
+    "\n",
+    "def initState(x0, v0, t0):\n",
+    "    ## Funçao que retorna um estado inicial contendo a posição,\n",
+    "    # velocidade e tempo inicial, contidos num array numpy\n",
+    "    \n",
+    "    S = np.array([x0, v0, t0])\n",
+    "    return S\n",
+    "\n",
+    "def rate(S, a, dt):\n",
+    "    ## Retorna um np.array contendo a taxa de variação do espaço\n",
+    "    #(v, ou seja, s[1]), velocidade (aceleração) \n",
+    "    # e tempo (que é constante e vale 1)\n",
+    "    \n",
+    "    R = np.array([S[1], a, 1])\n",
+    "    return R\n",
+    "\n",
+    "def nextState(S, dt):\n",
+    "    # Recebe um estado S e retorna o proximo estado Sn\n",
+    "    Sn = S + rate(S, a, dt)*dt\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -108,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -376,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -855,6 +888,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotando os dados usando o metodo de euler\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "EbCBjSK8njHh"
@@ -969,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
